[package]
name = "notion-parallel"
version = "0.1.0"
edition = "2021"

[lib]
name = "notion_parallel"
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
napi = "2.12"
napi-derive = "2.12"
napi-build = "2.0"

[build-dependencies]
napi-build = "2.0"

[profile.release]
lto = true
codegen-units = 1 